# thegn

./: .actrc  .envrc  .gitignore  .gitmodules  .secrets.example  .yamllint.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml  devenv.nix  flake.nix  install.sh  justfile  rustfmt.toml  setup-macos.sh  tasks.md  treefmt.nix  treefmt.toml
crates/gtui-app/: Cargo.toml
crates/gtui-app/src/: app.rs  engine.rs  explore.rs  lib.rs  ticker.rs
crates/gtui-core/: Cargo.toml
crates/gtui-core/src/: dashboard.rs  datasource.rs  frame.rs  lib.rs
crates/gtui-embed/: Cargo.toml
crates/gtui-embed/src/: embed.rs
crates/gtui-query/: Cargo.toml
crates/gtui-query/src/: host.rs  lib.rs  loki.rs  loki_parser.rs  prom_parser.rs  prometheus.rs  synthetic.rs
crates/gtui-render/: Cargo.toml
crates/gtui-render/src/: layout.rs  lib.rs  logs.rs  stat.rs  table.rs  timeseries.rs
crates/superzej-agent/: Cargo.toml
crates/superzej-agent/src/: lib.rs  main.rs  serve.rs
crates/superzej-agent/tests/: pty_over_iroh.rs
crates/superzej-cli/: Cargo.toml
crates/superzej-cli/src/: cli.rs  main.rs  zellij.rs
crates/superzej-cli/src/commands/: activity.rs  attach.rs  (+29 more)
crates/superzej-core/: Cargo.toml
crates/superzej-core/benches/: core_hot.rs
crates/superzej-core/src/: account.rs  activity.rs  aggregate.rs  attention.rs  blame.rs  bundle.rs  capabilities.rs  capacity.rs  ci.rs  config.rs  config_daemon.rs  config_defaults.rs  config_env_tables.rs  config_issues.rs  config_llm.rs  config_media.rs  config_placement.rs  config_remote.rs  config_resolve.rs  config_tests.rs  config_tests_coverage.rs  config_theme.rs  config_ui.rs  config_write.rs  control.rs  control_wire.rs  custom_cmd.rs  db.rs  db_aux.rs  db_cache.rs  db_compute.rs  db_control.rs  db_glyph.rs  db_hibernate.rs  db_intent.rs  db_iroh.rs  db_migrate.rs  db_notification.rs  db_pool.rs  db_proxy.rs  (+90 more)
crates/superzej-core/tests/: config_example.rs  devcontainer_e2e.rs  my_work_cache_scope.rs  plugin_api.rs  repo_issues_overlay.rs  sandbox_audit.rs  sandbox_credentials.rs  sandbox_dns_e2e.rs  sandbox_health.rs  sandbox_lifecycle.rs  sandbox_network_policy.rs  sandbox_profile.rs  sandbox_readonly_home.rs  sandbox_smol.rs
crates/superzej-dashboard/: Cargo.toml
crates/superzej-dashboard/src/: lib.rs  main.rs
crates/superzej-host/: Cargo.toml  build.rs  clippy.toml
crates/superzej-host/src/: acp_gate.rs  actions.rs  agent.rs  agent_configs.rs  agent_home.rs  agent_output.rs  agent_pi.rs  agent_ssh.rs  agent_teardown.rs  agent_tests.rs  ansi.rs  attention_status.rs  autoscale.rs  blast_radius.rs  borders.rs  bouncer.rs  bridge_sup.rs  build_cache.rs  caps.rs  center.rs  chrome.rs  chrome_tests.rs  ci_refresh.rs  cli_help.rs  clipboard.rs  compositor.rs  copymode.rs  desktop_notify.rs  detail.rs  detail_tests.rs  direnv_warm.rs  dragdrop.rs  drawer_state.rs  emulator.rs  env_ui.rs  env_wizard.rs  escape.rs  fff_backend.rs  fly_reaper.rs  focus.rs  (+118 more)
crates/superzej-host/testdata/: bats.tap  busted.tap  ctest.txt  dart.json  go.txt  phpunit.junit.xml  rspec.json
crates/superzej-host/tests/: bridge_subprocess.rs
crates/superzej-media/: Cargo.toml
crates/superzej-media/src/: applescript.rs  applescript_parse.rs  lib.rs  mediaremote.rs  mediaremote_parse.rs  model.rs  mpris.rs  mpris_cli.rs  mpv.rs  smtc.rs  smtc_decode.rs
crates/superzej-metrics/: Cargo.toml
crates/superzej-metrics/src/: battery.rs  gpu.rs  lib.rs  sample.rs
crates/superzej-svc/: Cargo.toml  build.rs
crates/superzej-svc/benches/: git_hot.rs
crates/superzej-svc/examples/: print_plan.rs  sprite_exec.rs
crates/superzej-svc/src/: ci.rs  gh.rs  git.rs  iroh_reach.rs  lib.rs  mcp_git.rs  provider.rs  ssh.rs
crates/superzej-svc/tests/: fly_live.rs  fly_mock.rs  iroh_fly_live.rs  lsp_client.rs  sprites_live.rs  sprites_mock.rs  vps_do_mock.rs  vps_live.rs  vps_mock.rs
crates/sz-kit/: Cargo.toml  README.md
crates/sz-kit/src/: input.rs  lib.rs  standalone.rs  theme.rs  tile.rs
crates/thegn-agent/: Cargo.toml
crates/thegn-agent/src/: lib.rs  main.rs  serve.rs
crates/thegn-agent/tests/: pty_over_iroh.rs
crates/thegn-core/: Cargo.toml
crates/thegn-core/benches/: core_hot.rs
crates/thegn-core/src/: account.rs  activity.rs  aggregate.rs  attention.rs  bundle.rs  capabilities.rs  capacity.rs  ci.rs  config.rs  config_daemon.rs  config_defaults.rs  config_env_tables.rs  config_forge.rs  config_issues.rs  config_llm.rs  config_media.rs  config_observe.rs  config_placement.rs  config_resolve.rs  config_sandbox.rs  config_tests.rs  config_tests_coverage.rs  config_theme.rs  config_ui.rs  config_write.rs  control.rs  control_wire.rs  custom_cmd.rs  db.rs  db_account.rs  db_aux.rs  db_cache.rs  db_hibernate.rs  db_iroh.rs  db_migrate.rs  db_placement.rs  db_proxy.rs  db_semantic.rs  db_tests.rs  db_trust.rs  (+89 more)
crates/thegn-core/tests/: config_example.rs  devcontainer_e2e.rs  my_work_cache_scope.rs  plugin_api.rs  repo_issues_overlay.rs  sandbox_audit.rs  sandbox_credentials.rs  sandbox_dns_e2e.rs  sandbox_health.rs  sandbox_lifecycle.rs  sandbox_network_policy.rs  sandbox_profile.rs  sandbox_readonly_home.rs  sandbox_smol.rs
crates/thegn-proxy/: Cargo.toml
crates/thegn-proxy/src/: anthropic_stream.rs  budget.rs  config.rs  headers.rs  health.rs  lib.rs  main.rs  model.rs  relay.rs  router.rs  server.rs  shared.rs  state.rs  upstream.rs
crates/thegn-proxy/tests/: e2e.rs
crates/thegn-svc/: Cargo.toml  build.rs
crates/thegn-svc/benches/: git_hot.rs
crates/thegn-svc/examples/: print_plan.rs  sprite_exec.rs
crates/thegn-svc/src/: ci.rs  gh.rs  ipc.rs  iroh_reach.rs  lib.rs  mcp_git.rs  provider.rs  ssh.rs
crates/thegn-svc/tests/: fly_live.rs  fly_mock.rs  iroh_fly_live.rs  lsp_client.rs  machine0_live.rs  sprites_live.rs  sprites_mock.rs  vps_do_mock.rs  vps_live.rs  vps_mock.rs
plugin/panel/: Cargo.toml
plugin/panel/src/: main.rs
plugin/sidebar/: Cargo.toml
plugin/sidebar/src/: main.rs
plugin/statusbar/: Cargo.toml
plugin/statusbar/src/: main.rs
plugin/tabbar/: Cargo.toml
plugin/tabbar/src/: main.rs
(+1659 files in other folders)
