[workspace]
resolver = "2"
members = [
  "crates/superzej-core",
  "crates/superzej-svc",
  "crates/superzej-host",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# --- shared domain/runtime deps ---
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2.5"
anyhow = "1"
syntect = { version = "5", default-features = false, features = [
  "default-syntaxes",
  "default-themes",
  "regex-fancy",
] }
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
nvml-wrapper = "0.12"
libc = "0.2"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "std",
  "fmt",
  "ansi",
  "env-filter",
  "registry",
] }
# --- palette (engine + the legacy iocraft view that still lives in the cli) ---
iocraft = "0.8.3"
smol = "2.0.2"
nucleo = "0.5.0"
nucleo-matcher = "0.3"
ignore = "0.4.26"
grep-searcher = "0.1.16"
grep-regex = "0.1.14"
grep-matcher = "0.1.8"
futures = "0.3"
# --- native host substrate (Phase 1+) ---
# NOTE: wezterm-term (the plan's first choice for its built-in sixel/kitty image
# protocols) is NOT published to crates.io — it is an internal WezTerm workspace
# crate. We use termwiz (published; outer-terminal render + Surface diff/flush +
# escape parser) and a pluggable `PaneEmulator` trait. The spike's emulator impl
# is vt100; high-fidelity/graphics swaps in alacritty_terminal + an escape-
# interception passthrough layer (or a wezterm-term git dep) without touching the
# compositor — see the host crate's emulator module.
# Minimal feature set: the host needs a multi-thread runtime (the loop blocks on
# `poll_input(None)`, so `spawn_blocking` work must run on other threads), the
# `#[tokio::main]` macro, and mpsc channels. svc's octocrab brings its own
# reqwest/hyper runtime needs. No `time`/net/fs/process here — the refresh ticker
# is a plain OS thread and subprocess + git I/O go through `spawn_blocking`.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
portable-pty = "0.9"
termwiz = "0.23"
vt100 = "0.16"
taffy = "0.5"
# --- native service layer (Phase 4/5) ---
octocrab = "0.53"
russh = "0.61"
gix = "0.84"
tokei = "12"
# --- internal crates ---
superzej-core = { path = "crates/superzej-core" }
superzej-svc = { path = "crates/superzej-svc" }

[profile.release]
strip = true
lto = "thin"
