[workspace]
resolver = "2"
members = [
  "crates/thegn-core",
  "crates/thegn-svc",
  "crates/thegn-agent",
  "crates/thegn-metrics",
  "crates/thegn-media",
  "crates/thegn-host",
  "crates/thegn-proxy",
  "crates/tg-kit",
  "crates/gtui-core",
  "crates/gtui-query",
  "crates/gtui-render",
  "crates/gtui-app",
  "crates/gtui-embed",
]
# Integrated app repos live under apps/ as git submodules, each with its OWN
# cargo workspace; keep these out of thegn's workspace so commands run from
# an arbitrary cwd don't try to absorb them. (thegn-host reaches their
# crates via explicit path deps — that resolves against each submodule's own
# [workspace], not this one.)
exclude = ["apps", "vendor"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
# MSRV floor: edition 2024 + stable let-chains + std file locks
# (`File::{lock,try_lock,unlock}`, 1.89). The dev shell pins stable.latest via
# rust-overlay; this field documents the oldest compiler expected to work and
# lets cargo/cargo-deny flag deps that outrun it.
rust-version = "1.89"

[workspace.dependencies]
# --- shared domain/runtime deps ---
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2.5"
anyhow = "1"
syntect = { version = "5", default-features = false, features = [
  "default-syntaxes",
  "default-themes",
  "regex-fancy",
] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
libc = "0.2"
nix = { version = "0.29", default-features = false, features = [
  "fs",
  "time",
  "signal",
  "process",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "std",
  "fmt",
  "ansi",
  "env-filter",
  "registry",
] }
ignore = "0.4.26"
# fff — Fabulous & Fast File Finder. `fff-search` is the stateful engine (warm
# in-memory index + LMDB frecency/combo-boost + SIMD fuzzy + multi-mode grep);
# lives only in the host crate (pulls heed/LMDB + vendored libgit2, so never in
# the substrate-free core). `neo_frizbee` is fff's underlying pure-Rust SIMD
# matcher — used directly for in-memory list fuzzing (replaces nucleo-matcher),
# including in core (C-dep-free, cross-compilable). Pinned to the exact nightly:
# fff publishes only prereleases (no stable line yet).
fff-search = "=0.9.7-nightly.fce72fa"
neo_frizbee = "0.10"
futures = "0.3"
# --- native host substrate (Phase 1+) ---
# NOTE: wezterm-term (the plan's first choice for its built-in sixel/kitty image
# protocols) is NOT published to crates.io — it is an internal WezTerm workspace
# crate. We use termwiz (published; outer-terminal render + Surface diff/flush +
# escape parser) and a pluggable `PaneEmulator` trait. The spike's emulator impl
# is vt100; high-fidelity/graphics swaps in alacritty_terminal + an escape-
# interception passthrough layer (or a wezterm-term git dep) without touching the
# compositor — see the host crate's emulator module.
# Minimal feature set: the host needs a multi-thread runtime (the loop blocks on
# `poll_input(None)`, so `spawn_blocking` work must run on other threads), the
# `#[tokio::main]` macro, and mpsc channels. svc's octocrab brings its own
# reqwest/hyper runtime needs. The AI metrics sidecar streams a child process's
# stdout (`spawn_ai_sidecar`), so `process` + `io-util` are needed too.
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "signal",
  "process",
  "io-util",
  "io-std",
  "net",
  "time",
] }
portable-pty = "0.9"
termwiz = "0.23"
# --- iroh p2p auto-tunnel (call-home reach; roadmap 124-126) ---
# Pure-Rust QUIC p2p dialed by NodeId (ed25519 pubkey) with NAT hole-punch +
# relay fallback (n0 public relays by default). This is the compiled-in
# transport a remote sandbox uses to *dial home* to thegn — no external
# daemon/coordinator (unlike Tailscale), so it works out of the box. Traffic is
# E2E-encrypted (QUIC+TLS by pubkey); relays only rendezvous. Rides the same
# rustls/ring stack as reqwest (single rustls in tree).
iroh = "1.0"
# --- native service layer (Phase 4/5) ---
octocrab = "0.53"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
# Native provider exec: PTY-over-WebSocket to a managed sandbox (Sprites WSS exec
# API), so interactive panes need no vendor CLI. rustls + webpki-roots matches
# reqwest's TLS stack (ring crypto provider) so there's a single rustls in tree.
tokio-tungstenite = { version = "0.24", default-features = false, features = [
  "connect",
  "handshake",
  "rustls-tls-webpki-roots",
] }
russh = "0.61"
# MPRIS media control over D-Bus (the Linux media backend). tokio-integrated so
# the host's runtime drives it; default async-io backend disabled. Lives in the
# C-dep-free `thegn-media` leaf, target-gated to Linux.
zbus = { version = "5", default-features = false, features = ["tokio"] }
# Windows System Media Transport Controls — the Windows media backend, target-
# gated to `cfg(windows)` in the `thegn-media` leaf (cross-checked, never
# linked on Linux).
windows = "0.58"
# Raw Win32 bindings for the host's platform seam (src/platform/windows.rs):
# stderr handle redirect, process liveness/termination, and (Phase 3) Job
# Objects. Target-gated to `cfg(windows)` — never linked on unix.
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
] }
# --- LLM proxy (group U/V): the one new HTTP-server dependency. tokio/reqwest
# are widened with extra features inside the thegn-proxy crate's own manifest
# (cargo merges them with the workspace base). ---
axum = "0.8"
# --- Control plane (add-control-plane-and-remote): the gRPC surface, feature-
# gated behind thegn-svc's `control-grpc`. `protox` compiles the .proto in
# pure Rust — no protoc anywhere in the build (keeps `nix develop`, the lean
# sandbox devshell, and bare `cargo build` all protoc-free). ---
tonic = { version = "0.13", default-features = false, features = [
  "codegen",
  "prost",
  "router",
  "server",
  "transport",
] }
prost = "0.13"
tonic-build = { version = "0.13", default-features = false, features = [
  "prost",
] }
protox = "0.7"
regex = "1"
gix = "0.84"
tokei = "12"
# Semantic git layer (item 309+): tree-sitter entity parsing across languages.
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
# --- cross-platform system metrics (masthead + telemetry substrate) ---
# Feature-gated to the subsystems we sample; processes live under `system` but
# are never refreshed on the hot path. sysinfo does no background work — cost is
# only paid on our ticker tick, preserving the ~0%-idle invariant.
sysinfo = { version = "0.39", default-features = false, features = [
  "system",
  "disk",
  "network",
  "component",
  "multithread",
] }
# Battery is the one metric sysinfo does not cover. Linux keeps our native sysfs
# reader (+ adapter `online` flag); other platforms use this cross-platform crate.
starship-battery = "0.11"
# --- internal crates ---
thegn-core = { path = "crates/thegn-core" }
thegn-svc = { path = "crates/thegn-svc" }
thegn-metrics = { path = "crates/thegn-metrics" }
thegn-media = { path = "crates/thegn-media" }
# --- dev/bench tooling ---
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[profile.dev]
# Build-speed tuning for the inner loop. `line-tables-only` keeps backtraces
# (file:line) meaningful while skipping full DWARF variable/type info — the bulk
# of debuginfo codegen + link cost. `unpacked` split-debuginfo keeps debug data
# out of the object files the linker stitches, cutting incremental link time.
# Deliberately NOT bumping `opt-level` on deps ([profile.dev.package."*"]): that
# trades build time for dep runtime, the opposite of what we want here. For an
# interactive lldb/gdb session that needs full locals, override with a scratch
# profile (`debug = true`).
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
strip = true
lto = "thin"
# Measured and deliberately rejected (`just bench`, 2026-06):
# - `codegen-units = 1`: warm first frame 52ms -> 59ms (noise; startup is
#   I/O-bound) for a 6x release build time cost. Revisit only with a render
#   throughput benchmark that shows a win.
# - `panic = "abort"`: a panic in a PTY reader thread or hydration worker
#   currently kills only that thread/task — abort would take down the whole
#   multiplexer with the user's shells in it.
