[package]
name = "gtui-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true

[dependencies]
gtui-app = { path = "../gtui-app" }
sz-kit = { path = "../sz-kit" }
chrono = { workspace = true }
gtui-core = { version = "0.1.0", path = "../gtui-core" }
