[package]
name = "gtui-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true

[dependencies]
gtui-app = { path = "../gtui-app" }
gtui-query = { path = "../gtui-query" }
gtui-render = { path = "../gtui-render" }
tg-kit = { path = "../tg-kit" }
thegn-core = { path = "../thegn-core" }
chrono = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
gtui-core = { version = "0.1.0", path = "../gtui-core" }
