[package]
name = "gtui-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true

[dependencies]
gtui-core = { path = "../gtui-core" }
superzej-metrics = { path = "../superzej-metrics" }
chrono = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
