[package]
name = "superzej-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "superzej substrate-agnostic core: state, git, sandbox, config, theme"

[features]
test-utils = []

[dependencies]
# Only for the `clap::ValueEnum` derive on `github::MergeMethod` (a CLI arg type
# that lives with its domain model). Cheap; keeps core CLI-usable.
clap.workspace = true
anyhow.workspace = true
# `flock(2)` for the cross-process git-mutation lock (util::lock_git_mutations).
libc.workspace = true
schemars = "0.8"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
walkdir.workspace = true
# Token-reduction engine: ANSI stripping + custom-filter regexes (proxy::compress).
regex.workspace = true
syntect.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nucleo-matcher.workspace = true
# Word-level / intra-line diff for the diff view (item 601): pure-Rust,
# `TextDiff::from_words` tokenizes on word boundaries.
similar = "2"
fluent-templates = "0.14.0"
unic-langid = "0.9.6"
sys-locale = "0.3.2"
once_cell = "1.21.4"

[dev-dependencies]
criterion.workspace = true

# Theme/palette construction — runs at startup and on every theme cycle.
[[bench]]
name = "core_hot"
harness = false
