[package]
name = "superzej-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true
description = "superzej native terminal host: the compositor + in-process chrome"

# The binary is `szhost` in-tree; the Nix package + install.sh install it as
# `superzej` (with `sj`/`szhost` aliases).
[[bin]]
name = "szhost"
path = "src/main.rs"

[features]
# In-process sampling profiler (SIGUSR2 → flamegraph dump from the live process,
# sidestepping ptrace_scope=1). Zero cost when off: the `pprof` dep and the
# signal handler are only compiled in under this feature. Build with
# `cargo build --features profiling` (see `just profile`).
profiling = ["dep:pprof"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
superzej-core.workspace = true
superzej-svc.workspace = true
superzej-metrics.workspace = true
superzej-media.workspace = true
anyhow.workspace = true
tracing.workspace = true
# CSPRNG for the iroh home secret key + per-sandbox auth tokens (src/iroh_home.rs).
getrandom = "0.3"
iroh.workspace = true
serde.workspace = true
serde_json.workspace = true
# `config show` round-trips the effective config as TOML; `config schema` emits
# the JSON schema (schemars pinned to core's version).
toml.workspace = true
schemars = "0.8"
# OS keyring for provider tokens (src/secret.rs). Pure-Rust backends only: on
# Linux the `async-secret-service` path uses zbus (NOT `sync-secret-service`,
# which pulls the C `libdbus-sys`); `async-io` is its lightweight runtime. Native
# on macOS/Windows. A missing Secret Service falls back to a 0600 file / env var.
keyring = { version = "3", default-features = false, features = [
  "async-secret-service",
  "async-io",
  "crypto-rust",
  "apple-native",
  "windows-native",
] }
# Compositor substrate (Phase 1). Feature set is pinned at the workspace level.
tokio = { workspace = true }
# Embedded host nix binary cache (src/nixcache.rs): an axum HTTP server that serves
# the host /nix/store to sprites over the reverse tunnel. tokio-util streams the
# `nix-store --dump` NAR with constant memory; futures provides the Stream trait.
axum = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
futures = { workspace = true }
portable-pty.workspace = true
termwiz.workspace = true
libc.workspace = true
chrono.workspace = true
ignore.workspace = true
# fff file-search engine (src/fff_backend.rs) + its pure-Rust SIMD matcher for
# in-memory list fuzzing (palette/gitui/workspace picker).
fff-search.workspace = true
neo_frizbee.workspace = true
notify = "6"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }
# Optional in-process sampling profiler (the `profiling` feature). flamegraph
# feature emits an SVG directly; protobuf would add pprof output.
pprof = { version = "0.14", features = ["flamegraph"], optional = true }
# The app-tab embedding contract (AppTile, shared theme, the pinned ratatui
# re-export). The host renders embedded apps' ratatui buffers through
# `sz_kit::ratatui` so the Buffer type is identical to what the apps produce.
sz-kit = { path = "../sz-kit" }
tokei.workspace = true
# Symbol-declaration regex (search_everywhere symbol sweep) — extracts the
# identifier from a definition line returned by fff grep.
regex.workspace = true
alacritty_terminal = "0.26"
toml_edit = "0.25.12"
# Display-width math: chrome layout (CJK/wide/emoji-aware truncation, so a line
# that measures `w` paints exactly `w` columns) and the compositor border clamp
# (never advance a wide cell past a pane's content rect into the card border).
unicode-width = "0.2"
sha2 = "0.10"
