[package]
name = "superzej-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "superzej native service layer: git/GitHub/ssh behind traits with CLI fallbacks"

[dependencies]
superzej-core.workspace = true
anyhow.workspace = true
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
# git reads go native via gix (Phase 2); GitHub via octocrab GraphQL (Phase 4).
gix.workspace = true
octocrab.workspace = true
reqwest.workspace = true
tokio.workspace = true
chrono.workspace = true
base64 = "0.22"
# Resident-bridge `fs.watch`: inotify in the env, streamed to the host. Matches
# the host's pin so the workspace resolves one version.
notify = "6"
# ACP client transport (newline-JSON over TCP) + request/reply plumbing.
tokio-util = { version = "0.7.18", features = ["codec"] }
futures-channel = "0.3.32"
futures-util = "0.3.32"
# Native provider exec transport (Sprites WSS PTY exec — see provider::SpritesProvider).
tokio-tungstenite.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

# The per-worktree git hot path (is_dirty / ahead_behind / current_branch) that
# the 2s model-refresh ticker fans across every worktree — the dominant idle
# cost. Compares gix-native vs CLI providers over a fixture of N worktrees.
[[bench]]
name = "git_hot"
harness = false
