[package]
name = "sz-kit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "superzej embedding contract: AppTile trait, backend-agnostic input, shared theme, and a standalone TUI harness"

[dependencies]
# The single ratatui version-pin: host and every app render through THIS
# re-export (`sz_kit::ratatui`), so version drift becomes a compile error.
# 0.30 (not 0.29) is mandatory: 0.29 pins `unicode-width =0.2.0`, which
# collides with the host's `vt100` (needs ^0.2.1); 0.30 dropped that pin.
ratatui = { version = "0.30", default-features = false, features = [
  "std",
  "macros",
] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = { version = "1", optional = true }

[features]
default = []
# The standalone crossterm event-loop harness (each app's `main.rs`). Pulls in
# ratatui's bundled crossterm backend; superzej-host never enables this.
standalone = ["dep:anyhow", "ratatui/crossterm"]
